<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_task_detail_shape"
    android:padding="@dimen/basic_marge">

    <com.picone.taskmanager.utils.customView.CustomTaskInformation
        android:id="@+id/task_detail_under_stain_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/task_detail_under_stain_expected_time"
        app:title="@string/under_stain" />

    <com.picone.taskmanager.utils.customView.CustomTaskInformation
        android:id="@+id/task_detail_under_stain_expected_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/separator"
        app:layout_constraintTop_toBottomOf="@id/task_detail_under_stain_title"
        app:title="@string/expected_time" />

    <ImageButton
        android:id="@+id/progress_information_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_marge"
        android:background="@drawable/custom_round_work_done"
        android:contentDescription="@string/show_progress_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="@dimen/separator_height"
        android:layout_marginTop="@dimen/little_marge"
        android:background="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_detail_under_stain_expected_time" />

    <com.picone.taskmanager.utils.customView.CustomTaskInformation
        android:id="@+id/task_detail_under_stain_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_detail_under_stain_expected_time"
        app:title="@string/description" />

</androidx.constraintlayout.widget.ConstraintLayout>